<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Final">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="SELECT YOUR PACKAGES"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smallpackage1"
        android:text="@string/package1"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:onClick="selectedPack"/>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smallpackage2"
        android:text="@string/package2"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:onClick="selectedPack"/>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smallpackage3"
        android:text="@string/package3"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:onClick="selectedPack"/>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smallpackage4"
        android:text="@string/package4"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:onClick="selectedPack"/>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smallpackage5"
        android:text="@string/package5"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:onClick="selectedPack"/>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smallpackage6"
        android:text="@string/package6"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:onClick="selectedPack"/>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/familypackage7"
        android:text="@string/package7"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:onClick="selectedPack"/>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/familypackage8"
        android:text="@string/package8"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:onClick="selectedPack"/>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/familypackage9"
        android:text="@string/package9"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:onClick="selectedPack"/>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/familypackage10"
        android:text="@string/package10"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:onClick="selectedPack"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:onClick="finalorder"/>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:background="@color/colorPrimary" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>