<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".order"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Days"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/saturday"
                android:onClick="selection"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/sunday"
                android:onClick="selection"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/monday"
                android:onClick="selection"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/tuesday"
                android:onClick="selection"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/wednesday"
                android:onClick="selection"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/thursday"
                android:onClick="selection"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/friday"
                android:onClick="selection"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Shift"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/day"
                android:onClick="selection"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/night"
                android:onClick="selection"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/both"
                android:onClick="selection"/>


        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/done"
        android:onClick="finalselection"/>
    <TextView
        android:id="@+id/finalresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="NEXT PAGE"
        android:background="@color/colorPrimary"/>

</LinearLayout>